--- a/app/views/admin/stores/show.html.erb
+++ b/app/views/admin/stores/show.html.erb
@@ -7,7 +7,7 @@
   <%= link_to "Open Store",  open_admin_store_path(@store) %>
 <% end %>
 <br>
-If You want to see, how looks your store, <%= link_to "Go to him!", store_catalog_path(@store), :target => "_blank" %>
+If You want to see, how looks your store, <%= link_to "Go to him!", stores_store_catalog_path(@store), :target => "_blank" %>
 
 
 
