--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,5 +17,5 @@
 <% end %>
 <div class="cleaner"></div>
 <% @opened_stores.each do |store|%>
-  <a class="home_store_box" href="<%= store_catalog_path(store) %>" target="_blank"><%= store.name %></a>
+  <a class="home_store_box" href="<%= stores_store_catalog_path(store) %>"><%= store.name %></a>
 <% end %>
