--- a/app/views/stores/stores/_store_menu.erb
+++ b/app/views/stores/stores/_store_menu.erb
@@ -1,5 +1,3 @@
 <div id="store_menu">
-  <%= link_to "Home", "#" %>
-  <%= link_to "Catalog", stores_store_catalog_path(@store) %>
-  <%= link_to "Cart", carts_path %>
+  Here will be some menu
 </div>
