--- a/app/views/carts/index.erb
+++ b/app/views/carts/index.erb
@@ -1,21 +1,7 @@
-<%= button_to "Empty all carts", @cart, method: :delete, confirm: 'Are you sure?' %>
-<%= button_to "Checkout all", new_order_path, method: :get %>
+<%= link_to "Empty all carts", @cart, method: :delete, confirm: 'Are you sure?' %>
+<%= link_to "Checkout all", new_order_path, method: :get %>
 <% @carts.each do |cart| %>
   <hr>
   <%= cart.store.name %>
-  <table>
-    <% cart.line_items.each do |item| %>
-      <tr>
-        <td><%= item.quantity %>&times;</td>
-        <td><%= item.product.title %></td>
-        <td><%= number_to_currency(item.total_price) %></td>
-      </tr>
-    <% end %>
-    <tr>
-      <td colspan="2">Total</td>
-      <td><%= number_to_currency(cart.total_price) %></td>
-    </tr>
-  </table>
-  <%= button_to "Checkout", "#", method: :get %>
-  <%= button_to "Empty cart", stores_store_empty_cart_path(cart.store), method: :delete, confirm: 'Are you sure?' %>
+  <%= render :partial => "cart", :locals => {:cart => cart, :store => cart.store} %>
 <% end %>
