--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New order</h1>
 
-<%= render 'form' %>
+<%= render "order" %>
 
-<%= button_to 'Back', root_path %>
+<%= link_to 'Back', root_path %>
