--- a/app/views/admin/stores/show.html.erb
+++ b/app/views/admin/stores/show.html.erb
@@ -1,13 +1,13 @@
 <%= render 'admin/stores/store_managing_menu'%>
 <% if @store.open%>
   You store is Open and him can see all users<br>
-  <%= link_to "Close Store", close_admin_store_path(@store) %>
+  <%= link_to "Close Store", close_admin_store_path(@store), :class => "button red" %>
 <% else %>
   This store is closed<br>
-  <%= link_to "Open Store",  open_admin_store_path(@store) %>
+  <%= link_to "Open Store",  open_admin_store_path(@store), :class => "button green"  %>
 <% end %>
 <br>
-If You want to see, how looks your store, <%= link_to "Go to him!", stores_store_catalog_path(@store), :target => "_blank" %>
+If You want to see, how looks your store, <%= link_to "Go to him!", stores_store_catalog_path(@store), :target => "_blank", :class => "button blue" %>
 
 
 
