--- a/app/views/layouts/stores/_header.erb
+++ b/app/views/layouts/stores/_header.erb
@@ -1,7 +1,7 @@
 <div id="header">
   <div id="title"><%= @store.name %></div>
 
-  <div id="header_menu">
+  <div class="float_r">
     <%= link_to "Home", root_path %>
     <%= link_to "Catalog", stores_store_catalog_path(@store) %>
     <%= link_to "Cart", stores_store_cart_path %>
