--- a/app/views/admin/stores/edit.html.erb
+++ b/app/views/admin/stores/edit.html.erb
@@ -1,4 +1,4 @@
 <%= render 'admin/stores/store_managing_menu'%>
 <%= render 'form' %>
 
-<%= button_to 'Delete Store', admin_store_path(@store), :method => :delete, :confirm => "Are You sure?" %>
+<%= link_to 'Delete Store', admin_store_path(@store), :method => :delete, :confirm => "Are You sure?", :class => "red button" %>
