--- a/app/views/layouts/_footer.erb
+++ b/app/views/layouts/_footer.erb
@@ -1,7 +1,34 @@
-<p>
-  <%= link_to "About Us", about_path %>
-  <%= link_to "Contact Us", contact_path %>
-</p>
-<p>
-  Copyright &copy; 2048 <a href="#">Your Company Name</a>
-</p>
+<div id="content">
+  <div class="col">
+    <h3>About</h3>
+    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+    type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
+    remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
+    <%= link_to "Read More", about_path %>
+  </div>
+  <div class="col">
+    <h3>Contact Us</h3>
+    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+    type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
+    remaining essentially unchanged.
+    <%= link_to "Read More", contact_path %>
+  </div>
+  <div class="col">
+    <h3>Collection</h3>
+    standard dummy text ever since ter took a galley of type and scrambled it to make a
+    type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
+    remaining essentially unchanged.
+    <%= link_to "Read More", "#" %>
+  </div>
+  <div class="col">
+    <h3>Stay in the Loop</h3>
+    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+    type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
+    remaining essentially unchanged.
+    <%= link_to "Read More", "#" %>
+  </div>
+  <div class="cleaner" id="cr">
+    Copyright &copy; 2048 <a href="#">Your Company Name</a>
+    <span class="float_r"><%=languages_select_tag%></span>
+  </div>
+</div>
