--- a/app/views/layouts/_header.erb
+++ b/app/views/layouts/_header.erb
@@ -1,6 +1,6 @@
 <div id="header">
   <% if signed_in?%>
-    <div id="stores_menu">
+    <div class="float_l">
       <%= link_to "+", new_admin_store_path if current_user.stores.count  != 0%>
       <% current_user.stores.each do |store| %>
         <%= link_to store.name, admin_store_path(store) %>
@@ -8,8 +8,7 @@
     </div>
   <% end %>
 
-  <div id="header_menu">
-    <%=languages_select_tag%>
+  <div class="float_r">
     <%= link_to t('Home'), root_path %>
     <%= link_to t('Help'), help_path %>
     <%= link_to "Carts", carts_path %>
@@ -21,8 +20,6 @@
       <%= link_to t('Sign_up'), signup_path %>
     <% end %>
   </div>
-
-  <%= render 'shared/signin_window'  %>
 </div>
 
 
