--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,10 @@
+Buttons examples:
+<div class="button green">Green</div>
+<div class="button yellow">Yellow</div>
+<div class="button blue">Blue</div>
+<div class="button red">Red</div>
+<div class="button grey">Grey</div>
+
 <% if signed_in? %>
   <ul class="float_l">
     <li>Easy to use online store builder</li>
@@ -6,7 +13,7 @@
     <li>Ecommerce hosting included</li>
     <li>30,000+ stores run on ShopUp</li>
   </ul>
-  <%= link_to "Create your stores now!", new_admin_store_path ,{:class => "big_green_button"} if current_user.stores.count  == 0%>
+  <%= link_to "Create your stores now!", new_admin_store_path ,{:class => "button green"} if current_user.stores.count  == 0%>
 <% else %>
   <h1>Create your ecommerce store today with ShopUp</h1>
   <h3>ShopUp offers a complete ecommerce solution</h3>
