--- a/app/views/shared/_signin_window.erb
+++ b/app/views/shared/_signin_window.erb
@@ -2,14 +2,14 @@
   <h3 class="center">Sign in</h3>
   <%= form_for(:session, :url => sessions_path) do |f| %>
     <div class="field">
-      <%= f.label :email %><br />
+      <%= f.label :email %>
       <%= f.text_field :email %>
     </div>
     <div class="field">
-      <%= f.label :password %><br />
+      <%= f.label :password %>
       <%= f.password_field :password %>
     </div>
-    <div class="actions">
+    <div>
       <%= f.submit "Sign in" %>
     </div>
   <% end %>
