--- a/app/views/admin/stores/_store_managing_menu.erb
+++ b/app/views/admin/stores/_store_managing_menu.erb
@@ -5,7 +5,7 @@
   <%= link_to "Products", admin_store_products_path(@store) %>
   <%= link_to "Categories", admin_store_categories_path(@store) %>
   <%= link_to "Fields",admin_store_fields_path(@store) %>
-  <%= link_to "Orders","#" %>
+  <%= link_to "Orders",admin_store_orders_path(@store) %>
   <%= link_to "Design","#" %>
   <%= link_to "Co-owners","#" %>
   <%= link_to "Other","#" %>
