--- a/app/assets/stylesheets/store/application.scss
+++ b/app/assets/stylesheets/store/application.scss
@@ -139,6 +139,51 @@
   }
 }
 
+/* hyinya */
+
+.comment-holder {
+  background: #DDDDDD;
+  border: 1px solid #DFDFDF;
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.298);
+  margin-bottom: 20px;
+  padding: 15px 30px 15px 15px;
+  .comment_remover{
+    display: none;
+    position: relative;
+    width: 20px;
+    top: 0px;
+    float: right;
+  }
+  &:hover{
+    .comment_remover{
+      display: inline;
+      #comment_remove{
+        cursor: pointer;
+      }
+    }
+  }
+}
+
+.comment-info {
+  width: 600px;
+}
+
+.comment-meta {
+  color: #999999;
+  font-size: 0.75em;
+  margin: 0px 0px 3px;
+  padding: 4px 0px;
+  position: relative;
+  top: -2px;
+}
+
+.comment-content{
+  word-wrap: break-word;
+}
+
+
+
+
 
 
 
