--- a/app/views/stores/comments/_comment.html.erb
+++ b/app/views/stores/comments/_comment.html.erb
@@ -4,15 +4,15 @@
     </div>
     <div class="comment-info float_r">
       <div><%= comment.user.first_name %> <%= comment.user.last_name %>
-        <% if comment.user == current_user || @store.owner == current_user %>
+        <% if !comment.deleted? && (comment.user == current_user || @store.owner == current_user) %>
             <div class="comment_remover">
               <div id="comment_remove" comment_id="<%= comment.id%>">x</div>
             </div>
         <% end %>
       </div>
       <div class="comment-meta"><%= comment.created_at %></div>
-      <div class="comment-content" id="comment_content" comment_id="<%= comment.id%>">
-        <p><%= comment.content %></p>
+      <div class="comment-content" comment_id="<%= comment.id%>">
+        <p><%= comment.deleted? ? "Comment was deleted by admin." : comment.content %></p>
       </div>
     </div>
     <div class="cleaner"></div>
