--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -11,11 +11,43 @@ All Products
   <%= render :partial => 'product_holder', :locals => { :products => @products }%>
 </div>
 
-<% @products.count.times do |page| %>
-  <%= page %>
-<% end %>
+<div class="pagination">
+  <% @pages_count.times do |page| %>
+    <a href="#" page="<%= page + 1 %>" class="<%= (@current_page == (page + 1).to_s)?"current":"" %>" onclick="go_to_page(this, <%= page + 1%>);">
+      <%= page + 1 %>
+    </a>
+  <% end %>
+</div>
 
 <script>
+
+    function refresh_search_results(page){
+        page = page || 1;
+        keyword = j("#search").val();
+        category = j("#category_").val();
+        j.ajax({
+            url: "<%= admin_store_products_path(@store) %>",
+            type: 'GET',
+            data: {q : keyword, category_id : category, page : page, requestasync : "yes"},
+            beforeSend: function () {
+            },
+            complete: function(){
+            },
+            error: function(err){
+                alert("error");
+            },
+            success: function(data){
+                j("#products").html(data);
+            }
+        });
+    }
+
+    function go_to_page(element, page){
+       j(".current").removeClass("current");
+       j(element).addClass("current");
+       refresh_search_results(page);
+    }
+
   j(document).ready(function(){
       j("#search").keyup(function(){
           refresh_search_results();
@@ -23,25 +55,6 @@ All Products
       j("#category_").change(function(){
           refresh_search_results();
       });
-      function refresh_search_results(){
-          keyword = j("#search").val();
-          category = j("#category_").val();
-          j.ajax({
-              url: "<%= admin_store_products_path(@store) %>",
-              type: 'GET',
-              data: {q : keyword, category_id : category},
-              beforeSend: function () {
-              },
-              complete: function(){
-              },
-              error: function(err){
-                  alert("error");
-              },
-              success: function(data){
-                  j("#products").html(data);
-              }
-          });
-      }
   });
 
 
