--- a/app/views/stores/comments/_comment.html.erb
+++ b/app/views/stores/comments/_comment.html.erb
@@ -1,6 +1,6 @@
-<div class="comment-holder">
+<div class="container_holder">
     <div class="float_l">
-      <div class="comment-author vcard pic"><img src='<%= comment.user.avatar.url :thumb %>' height='55' width='55' /></div>
+      <div class="container_picture"><img src='<%= comment.user.avatar.url :thumb %>' height='55' width='55' /></div>
     </div>
     <div class="comment-info float_r">
       <div><%= comment.user.first_name %> <%= comment.user.last_name %>
