--- a/app/assets/stylesheets/store/application.scss
+++ b/app/assets/stylesheets/store/application.scss
@@ -139,9 +139,9 @@
   }
 }
 
-/* hyinya */
+/* container holder */
 
-.comment-holder {
+.container_holder {
   background: #DDDDDD;
   border: 1px solid #DFDFDF;
   box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.298);
@@ -161,6 +161,11 @@
         cursor: pointer;
       }
     }
+  }
+  .container_picture{
+    background-color: white;
+    padding: 4px;
+    margin: 0;
   }
 }
 
